# brave-core

./: BUILD.gn  DEPS
android/: brave_java_sources.gni
app/: brave_generated_resources.grd
browser/: BUILD.gn  brave_browser_process_impl.cc  brave_browser_process_impl.h  brave_profile_prefs.cc
browser/brave_rewards/: checkout_dialog_controller.cc  checkout_dialog_controller.h  checkout_dialog_message_handler.cc  checkout_dialog_message_handler.h
browser/extensions/api/: brave_rewards_api.cc  brave_rewards_api.h  brave_shields_api.cc  brave_shields_api.h
browser/ntp_background_images/android/: ntp_background_images_bridge.cc  ntp_background_images_bridge.h
browser/ui/: BUILD.gn
browser/ui/webui/: brave_new_tab_message_handler.cc  brave_webui_source.cc
chromium_src/chrome/browser/: about_flags.cc  (+2 more)
common/: pref_names.cc  pref_names.h
components/brave_private_cdn/: private_cdn_helper.cc
components/brave_usermodel_parameters/browser/: BUILD.gn  brave_usermodel_parameter_service.cc  brave_usermodel_parameter_service.h  brave_usermodel_parameter_service_unittest.cc  models.cc  models.h  parameters.cc  parameters.h  regions.cc  regions.h
components/definitions/: chromel.d.ts  newTab.d.ts
components/resources/: brave_components_strings.grd
patches/: chrome-VERSION.patch  chrome-browser-renderer_context_menu-render_view_context_menu.cc.patch  chrome-installer-mini_installer-BUILD.gn.patch  chrome-tools-build-win-create_installer_archive.py.patch
renderer/: brave_content_settings_agent_impl_browsertest.cc
script/: signing_helper.py
test/: BUILD.gn
(+52 files in other folders)
